--- a/header.html
+++ b/header.html
@@ -65,8 +65,8 @@
         <button id="mobileMenuButton" class="bg-white text-gray-800 w-10 h-10 rounded md:hidden flex items-center justify-center"><i class="fas fa-bars text-xl"></i></button>
 
         <!-- মোবাইল সাইডবার ওভারলে -->
-        <div class="fixed inset-0 z-40 hidden" id="sidebarOverlay">
-            <div class="fixed top-0 left-0 h-full w-4/5 bg-white shadow-lg transform -translate-x-full transition-transform duration-500 ease-in-out" id="sidebar">
+        <div class="fixed inset-0 z-40 bg-black bg-opacity-50 opacity-0 transition-opacity duration-300 ease-in-out" id="sidebarOverlay">
+            <div class="fixed top-0 left-0 h-full w-4/5 bg-white shadow-lg transform -translate-x-full transition-transform duration-300 ease-in-out" id="sidebar">
                 <div class="p-4 h-full flex flex-col">
                     <button id="closeSidebarButton" class="text-gray-600 hover:text-gray-900">
                         <i class="fas fa-times"></i>
