--- a/product-detail.html
+++ b/product-detail.html
@@ -44,22 +44,24 @@
     <main class="p-4 pt-24 md:pt-28 max-w-4xl mx-auto"> 
 
 
-        <div id="productContent" class="hidden">
+        <div id="productContent" class="hidden md:grid md:grid-cols-2 md:gap-8">
             <div class="image-gallery">
                 <div class="main-image-container">
                     <img id="mainImage" src="https://via.placeholder.com/500x400.png?text=Loading..." alt="Main Product Image">
                 </div>
                 <div class="thumbnail-container" id="thumbnailContainer"></div>
             </div>
-            <h1 id="productTitle" class="text-2xl lg:text-3xl font-bold mb-4 text-gray-800">প্রোডাক্ট</h1>
-            <p id="productPrice" class="text-lipstick text-xl lg:text-2xl font-bold mb-4">দাম</p>
-            <div id="productDetailsExtra" class="mb-6"></div>
-            <p id="productDescription" class="text-gray-700 mb-6 leading-relaxed">বিবরণ</p>
-            
-            <div id="actionButtons" class="flex flex-col sm:flex-row space-y-3 sm:space-y-0 sm:space-x-4">
-                </div>
+            <div>
+                <h1 id="productTitle" class="text-2xl lg:text-3xl font-bold mb-4 text-gray-800">প্রোডাক্ট</h1>
+                <p id="productPrice" class="text-lipstick text-xl lg:text-2xl font-bold mb-4">দাম</p>
+                <div id="productDetailsExtra" class="mb-6"></div>
+                
+                <div id="actionButtons" class="flex flex-col space-y-3 mb-6">
+                    </div>
+                <p id="productDescription" class="text-gray-700 mb-6 leading-relaxed">বিবরণ</p>
+            </div>
         </div>
-        <section id="relatedProductsSection" class="mt-8 hidden">
+        <section id="relatedProductsSection" class="mt-8">
             <h2 class="text-2xl font-bold text-center mb-4 text-lipstick-dark">Related Products</h2>
             <div id="relatedProductsContainer" class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
                 <!-- Related products will be loaded here -->
