--- a/product-detail.html
+++ b/product-detail.html
@@ -15,8 +15,8 @@
 
         /* ইমেজ গ্যালারি স্টাইল */
         .image-gallery { display: flex; gap: 15px; margin-bottom: 20px; }
-        .main-image-container { flex: 1; max-width: 500px; }
-        #mainImage { width: 100%; max-height: 400px; object-fit: contain; border: 1px solid #e5e7eb; border-radius: 4px; cursor: pointer; }
+        .main-image-container { flex: 1; max-width: 500px; position: relative; padding-bottom: 75%; /* 4:3 Aspect Ratio */ height: 0; overflow: hidden; }
+        #mainImage { position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: contain; border: 1px solid #e5e7eb; border-radius: 4px; cursor: pointer; }
         .thumbnail-container { display: flex; flex-direction: column; gap: 10px; max-height: 400px; overflow-y: auto; }
         .thumbnail { width: 70px; height: 70px; object-fit: cover; border: 2px solid transparent; border-radius: 4px; cursor: pointer; transition: border-color 0.3s ease; }
         .thumbnail.active { border-color: #A52A2A; }
