--- a/order-track.html
+++ b/order-track.html
@@ -38,7 +38,7 @@
                 <p class="text-center text-sm text-gray-500 mt-4">অথবা, আপনার সকল অর্ডার দেখতে</p>
             </div>
             <div id="loginPrompt" class="text-center">
-                <button id="loginButton" class="bg-gray-700 text-white px-8 py-3 rounded-lg font-semibold hover:bg-opacity-90 transition-colors mt-2">
+                <button id="loginButton" class="bg-lipstick text-white px-8 py-3 rounded-lg font-semibold hover:bg-opacity-90 transition-colors mt-2">
                     <i class="fab fa-google mr-2"></i> Google দিয়ে লগইন করুন
                 </button>
             </div>
