--- a/product-detail.html
+++ b/product-detail.html
@@ -58,7 +58,10 @@
                 
                 <div id="actionButtons" class="flex flex-col space-y-3 mb-6">
                     </div>
-                <p id="productDescription" class="text-gray-700 mb-6 leading-relaxed">বিবরণ</p>
+                <div class="description-container">
+                    <p id="productDescription" class="text-gray-700 mb-3 leading-relaxed"></p>
+                    <button id="toggleDescriptionBtn" class="text-lipstick font-semibold text-sm focus:outline-none hidden"></button>
+                </div>
             </div>
         </div>
         <section id="relatedProductsSection" class="mt-8">
