--- a/order-track.html
+++ b/order-track.html
@@ -24,27 +24,18 @@
 
     <!-- মেইন কন্টেন্ট -->
     <div class="container mx-auto pt-20 pb-8 px-4 min-h-screen">
-
-        <div id="trackingArea" class="p-6 bg-white rounded-lg shadow-md">
-            <div id="guestTracking" style="display: none;">
-                <h2 class="text-2xl font-bold text-center mb-4 text-lipstick">আপনার অর্ডার ট্র্যাক করুন</h2>
-                <p class="text-center text-gray-600 mb-6">আপনার অর্ডার আইডি দিয়ে অর্ডারের বর্তমান অবস্থা জানুন।</p>
-                <div class="flex flex-col sm:flex-row gap-2 max-w-md mx-auto">
-                    <input type="text" id="orderIdInput" placeholder="আপনার অর্ডার আইডি লিখুন" class="flex-grow p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-lipstick">
-                    <button id="trackOrderBtn" class="bg-lipstick text-white px-6 py-3 rounded-lg font-semibold hover:bg-opacity-90 transition-colors">
-                        ট্র্যাক করুন
-                    </button>
-                </div>
-                <p class="text-center text-sm text-gray-500 mt-4">অথবা, আপনার সকল অর্ডার দেখতে</p>
-            </div>
-            <div id="loginPrompt" class="text-center">
-                <button id="loginButton" class="bg-lipstick text-white px-8 py-3 rounded-lg font-semibold hover:bg-opacity-90 transition-colors mt-2">
-                    <i class="fab fa-google mr-2"></i> Google দিয়ে লগইন করুন
-                </button>
-            </div>
+        <h1 class="text-3xl font-bold text-center mb-8 text-lipstick">আপনার অর্ডারসমূহ</h1>
+        
+        <!-- লগইন প্রম্পট -->
+        <div id="loginPrompt" class="text-center p-6 bg-white rounded-lg shadow-md">
+            <p class="text-lg text-gray-700 mb-4">আপনার অর্ডারের তালিকা দেখতে অনুগ্রহ করে লগইন করুন।</p>
+            <button id="loginButton" class="bg-lipstick text-white px-8 py-3 rounded-lg font-semibold hover:bg-opacity-90 transition-colors">
+                <i class="fab fa-google mr-2"></i> Google দিয়ে লগইন করুন
+            </button>
         </div>
 
-        <div id="orderListContainer">
+        <!-- অর্ডার লিস্ট -->
+        <div id="orderListContainer" class="hidden">
             <div id="orderList" class="bg-white rounded-lg shadow-md"></div>
         </div>
     </div>
@@ -59,9 +50,6 @@
 
     <!-- ফুটার -->
     <div id="footer"></div>
-
-    <!-- Firebase এবং স্ক্রিপ্ট -->
-
 
     </div>
     <script type="module" src="js/main.js"></script>
