--- a/order-form.html
+++ b/order-form.html
@@ -172,7 +172,7 @@
                     </button>
 
                     <div class="mt-4 text-center text-sm text-gray-600">
-                        <p>অর্ডার কনফার্ম করলে আমাদের <a href="terms.html" class="text-lipstick underline">টার্মস অ্যান্ড কন্ডিশন</a> এ আপনি concerned</p>
+                        <p>অর্ডার কনফার্ম করলে আমাদের <a href="terms.html" class="text-lipstick underline">টার্মস অ্যান্ড কন্ডিশন</a> এ আপনি согласитесь</p>
                     </div>
                 </div>
             </div>
